--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
 - nuget install Twilio.Pricing -Version 1.1.0 -OutputDirectory nuget
 - nuget install Twilio.Lookups -Version 1.1.0 -OutputDirectory nuget
 - nuget install Twilio.IpMessaging -Version 1.2.0 -OutputDirectory nuget
+- nuget install Twilio.Auth -Version 1.2.0 -OutputDirectory nuget
 - git clone https://github.com/TwilioDevEd/twilio-api-faker.git
 - sudo cp twilio-api-faker/keystore/twilio_fake.pem /usr/local/share/ca-certificates/twilio_fake.crt
 - sudo update-ca-certificates
